Rendered text to show FPS on screen

--- a/RPG-Game.vcxproj
+++ b/RPG-Game.vcxproj
@@ -150,12 +150,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="FrameRate.cpp" />
     <ClCompile Include="GameMath.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="FrameRate.h" />
     <ClInclude Include="GameMath.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
